# nptelize

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: frontend-build-check.yaml
alembic/: env.py
alembic/versions/: 2621dcefe342_add_unique_constraint_to_teacher_id_in_.py  794193fcc1f0_add_verification_file_url_field_to_.py  798619c2616c_remove_unique_constraint_for_subject_.py  988cb0fc5478_add_timestamps_for_updates_and_due_date.py  a4c0e7f6eded_add_remark_field_to_certificate.py
app/: main.py  oauth2.py  schemas.py
app/config/: __init__.py  db.py
app/models/: __init__.py
app/router/: __init__.py  user.py
app/router/admin/: routes.py  schemas.py
app/router/student/: routes.py  schemas.py
app/router/subject/: routes.py
app/router/teacher/: routes.py  schemas.py
app/router/user/: routes.py  schemas.py
app/services/: verifier.py
app/services/utils/: __init__.py  csv_reader.py  downloader.py  extractor.py  hashing.py  limiter.py  qr_extraction.py
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  gunicorn.conf.py  pyproject.toml  requirements.txt
backend/alembic/versions/: 5153f1a3b3a3_add_under_review_status_to_.py
backend/app/: main.py  oauth2.py  schemas.py
backend/app/config/: __init__.py  db.py
backend/app/database/: core.py  models.py  modules_and_roles.py
backend/app/database/revisions/: env.py
backend/app/database/revisions/versions/: 08efb1a7ad99_add_no_certificate_file_to_requeststatus.py  2af31e69acd9_remove_unique_constraint_for_nptel_.py  31acd1df1ad1_add_processing_field_to_requeststatus.py  387e676d1f94_edit_roles_table_and_add_user_role_.py  3a044bf3b93c_add_timezone_to_date_time_values.py  53c3a6a591aa_remove_deprecated_columns_from_requests_.py  56144840703d_add_year_sem_and_teacher_id_to_student_.py  5df859e79299_first_migration.py  707b66d3359c_add_student_subject_enrollment_id_as_a_.py  7dc6b0df0ee0_add_subject_code.py  a6547add41b9_rename_student_subject_table_to_student_.py  a6ed6b2dc8cb_add_module_and_role_table.py  b8685ba94eaf_add_teacher_subject_allotments_table.py  c1235139c0ee_update_primary_key_for_requests_table.py  cc2292cdad1a_add_teacher_subject_allotment_id_to_.py  db2be668f43a_remove_deprecated_columns_from_student_.py  e4efa71faa75_add_primary_key_to_student_subjects_.py  fbd103d62084_edit_unique_constraint_for_teacher_.py
backend/app/models/: __init__.py
backend/app/nptel/: api.py  oauth2.py
backend/app/nptel/router/admin/: routes.py  schemas.py
backend/app/nptel/router/student/: routes.py
backend/app/nptel/router/teacher/: routes.py  schemas.py  service.py
backend/app/nptel/router/user/: routes.py  schemas.py
backend/app/router/admin/: routes.py
backend/app/router/student/: routes.py
backend/app/router/teacher/: routes.py  schemas.py
backend/app/router/user/: routes.py  schemas.py
backend/app/services/: cleanup.py  log_service.py  verifier.py
backend/app/services/utils/: downloader.py  extractor.py  file_storage.py  hashing.py  limiter.py  qr_extraction.py
frontend/: .dockerignore  .env.example  Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/public/landing/: hero.avif
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Developers.css  Developers.tsx  LoginForm.tsx  Navbar.tsx  providers.tsx
frontend/src/store/: useAuthStore.ts
src/: App.tsx  Layout.tsx  index.css  main.tsx
src/components/: Developers.tsx  LoginForm.tsx  Navbar.tsx  ProtectedRoute.tsx  PublicRoutes.tsx  notification.tsx
src/components/admin/: CreateAdmin.tsx  CreateFaculty.tsx  CreateStudent.tsx  CreateSubject.tsx  EnrollStudents.tsx  LoginForm.tsx  StudentSubjectsTable.tsx  StudentTable.tsx  SubjectTable.tsx  TeacherTable.tsx
src/components/faculty/: Pagination.tsx  (+4 more)
src/store/: useAuthStore.ts
(+61 files in other folders)
